--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                     <div class="address-icon-bg">
                       <span class="ti-email"></span>
                     </div>
-                    <p class="single-contact-info"><a href="mailto:hasan.nazmulmmc@gamil.com">www.marveltheme.com</a></p>
+                    <p class="single-contact-info"><a href="">fikisandbox@gmail.com</a></p>
                   </div>
 
                   <div class="single-address">
